# Juli-AI

./: .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  .npmrc  CONTEXT.md  EXECUTION.md  README.md  ab_experiment_plan.md  agent-runtime.config.yml  alembic.ini  dictionary.md  done.md  harness-editable.yml  harness-safelist.yml  issues.md  migration_path.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  requirements.txt  summary.md  test.db  turbo.json
backend/: README.md  __init__.py  pyproject.toml  runtime.py
backend/ai/: README.md
backend/ai/ad_performance/: MODULE.md  __init__.py  cli.py  inference.py  rules.py  train.py  types.py
backend/ai/anomaly/: MODULE.md  __init__.py  cli.py  inference.py  train.py
backend/ai/artifacts/: __init__.py  load.py  promotion.py  publish.py  schema.py  smoke.py  thresholds.py
backend/ai/dataset/: MODULE.md  __init__.py  assembler.py  cli.py  exceptions.py  validation.py
backend/ai/features/: MODULE.md  __init__.py  ad.py  anomaly.py  loader.py  seller_stage.py
backend/ai/seller_stage/: MODULE.md  __init__.py  cli.py  compare.py  fixtures.py  inference.py  rules.py  train.py  types.py
backend/api/: README.md
backend/api/api/: MODULE.md  __init__.py  app.py  dependencies.py  main.py
backend/api/api/routers/: alerts.py  analytics.py  auth_tiktok.py  creators.py  debug_tiktok.py  inventory.py  livestreams.py  orders.py  outcomes.py  products.py  recommendations.py  settlements.py  shops.py
backend/api/services/tiktok/: __init__.py  app_review_store.py  oauth.py  (+6 more)
backend/database/: MODULE.md  README.md  __init__.py  database.py  models.py  repos.py  token_crypto.py
backend/database/migrations/: env.py
backend/integrations/: README.md
backend/src/juli_backend/: __init__.py  orm_base.py
backend/workers/: README.md
(+2702 files in other folders)
