[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "juli-backend"
version = "0.1.0"
description = "Juli AI Python backend (FastAPI modular monolith)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0,<3.0.0",
    "fastapi>=0.115.0,<1.0.0",
    "httpx>=0.27.0,<1.0.0",
    "uvicorn>=0.30.0,<1.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "sqlalchemy[asyncio]>=2.0.51,<3.0.0",
    "asyncpg>=0.31.0,<1.0.0",
    "psycopg2-binary>=2.9.12,<3.0.0",
    "alembic>=1.14.0,<2.0.0",
    "aiosqlite>=0.22.1,<1.0.0",
    "pyjwt[crypto]>=2.13.0,<3.0.0",
    "redis>=8.0.1,<9.0.0",
    "pandas>=2.2.0,<3.0.0",
    "pyarrow>=24.0.0,<25.0.0",
    "scikit-learn>=1.9.0,<2.0.0",
    "xgboost>=3.3.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
    "types-requests>=2.31.0,<3.0.0",
    "pytest>=8.0.0,<9.0.0",
    "pytest-mock>=3.12.0,<4.0.0",
    "pytest-asyncio>=0.24.0,<1.0.0",
    "pytest-cov>=5.0.0,<7.0.0",
    "responses>=0.25.0,<1.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "bandit>=1.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/juli_backend"]

[tool.hatch.build.targets.sdist]
include = ["src/juli_backend", "README.md"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["../tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["UP042", "UP046", "UP047"]

[tool.ruff.lint.per-file-ignores]
"**/database/migrations/**" = ["E501"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disable_error_code = ["valid-type"]

[tool.coverage.run]
source = ["juli_backend"]
branch = true

[tool.coverage.report]
fail_under = 80
